# roomvu-backend

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: .env.example  Dockerfile  docker-compose.yml
src/: server.py
src/api/: __init__.py
src/api/scraper/: routes.py  service.py
src/api/video/: routes.py  service.py
src/core/: mocks.py  settings.py
src/core/bootstrap/: app.py  routers.py
src/core/db/: redis.py
