[tool.poetry]
name = "roomvu-test"
version = "1.0.0"
description = ""
authors = ["Behrooz Payoon <behrooz.payoon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
moviepy = "^1.0.3"
pydantic-settings = "^2.6.0"
redis = "^5.2.0"
uvicorn = "^0.32.0"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
